sandbox/output
MedicineClash.java:5: error: cannot find symbol
        return new HashSet<Customer>();
                   ^
  symbol:   class HashSet
  location: class MedicineClash
1 error
